needs some edits from leah
leah: can you give an editorial touch on the document? (the markdown
one is the source that we generate from)

My particular way of expression is bad... It's quite late here, and
I'm in for some school stuff, so my brain is malfunctioning and I need
some help.

--- a/draft-pragmatics/pragmatics.7
+++ b/draft-pragmatics/pragmatics.7
@@ -62,7 +62,7 @@ As almost all types of development can be done on most types of BSD and GNU oper
 .PP
 The latter is more interesting, as explained above our methods of spreading awareness is limited.
 
-.SH "ACTION PROCEDURE"
+.SH "CURRENT PRACTICES"
 .PP
 Activists \fBMUST NOT\fP list such nonfree services in "Contact Information" pages on their website or similar sources, unless followed by a explanation that the purpose of the nonfree platform is to introduce users thereof onto free protocols and to eventually exterminate the nonfree platform.  Whenever these references to nonfree platforms appear, the author \fBMUST\fP present free methods of communication.  Activists \fBSHOULD\fP pragmatically use as many of the popular free protocols as possible, to ensure that oppurtunities of introductions are not lost.  In cases involving competition between free and nonfree protocols and platforms, ethical concerns (i.e. enabling talking to a new user on any ethical platform) \fBMUST\fP take precedence over technical concerns (such as disliking the XMPP protocol for its inefficent use of XML) whenever possible.
 
@@ -78,7 +78,13 @@ For example, the author created a Discord Guild called Free Software Introductio
 The old and centralized nature of IRC, the insane 3PID recommendation of Matrix, the bad routing and efficency of XMPP, and the lack of documentation on PSYC, has led us to develop a new protocol, Internet Delay Chat[IDC], which aims to be free, modern (i.e. support for channel groups and shared permission sets, non-text data with MIME types), sane (i.e. TCP, UDP and SCTP-based, instead of HTTP POST APIs) and simple.
 
 .SH "CONCLUSION"
+.PP
+The Free Software Community is constantly evolving; the majority of computer users haven't heard of us.  While we improve our software, it is important that our ideology and philosophy is sent out of our internal circle.  This demonstrates the neccessity for momentarily sacrificing our own principle for the greater good while minimizing the harms of such pragmatic usage of nonfree software.
+
 .SH "FSF CONSIDERATIONS"
+.PP
+Any ideas on this one?
+
 .SH "BIBLIOGRAPHY"
 .TP
 [IDC]
@@ -96,7 +102,13 @@ Is It Ever a Good Thing to Use a Nonfree Program?
 
 
 .SH "ACKNOWLEDGEMENTS"
+.PP
+iShareFreedom's absolute standpoint in #fsf that we can spread awareness effectively through free methods exclusively has led to this RFD.
+
 .SH "CONTRIBUTORS"
+.PP
+Many thanks to Leah Rowe?
+
 .SH "AUTHORS"
 .PP
 Written by Andrew Yu.
