idc is informative not normative

--- a/draft-pragmatics/pragmatics.7
+++ b/draft-pragmatics/pragmatics.7
@@ -87,18 +87,20 @@ Any ideas on this one?
 
 .SH "BIBLIOGRAPHY"
 .TP
-[IDC]
-Andrew Yu
-The Second School Affiliated to Fudan University
-Internet Delay Chat
-\[la]https://git.andrewyu.org/internet-delay-chat\[ra]2022
-
-.TP
 [RMSGP]
 Richard Stallman
 The GNU Project
 Is It Ever a Good Thing to Use a Nonfree Program?
 \[la]http://www.gnu.org/philosophy/is-ever-good-use-nonfree-program.en.html\[ra]2013
+
+
+.SH "BIBLIOGRAPHY"
+.TP
+[IDC]
+Andrew Yu
+The Second School Affiliated to Fudan University
+Internet Delay Chat
+\[la]https://git.andrewyu.org/internet-delay-chat\[ra]2022
 
 
 .SH "ACKNOWLEDGEMENTS"
