"normative" and "informational" references in the man page

--- a/draft-pragmatics/pragmatics.7
+++ b/draft-pragmatics/pragmatics.7
@@ -83,7 +83,7 @@ The Free Software Community is constantly evolving; the majority of computer use
 .PP
 It is \fBRECOMMENDED\fP that the FSF understands the use of nonfree software in these situations and acknowledge its pragmatic use.
 
-.SH "BIBLIOGRAPHY"
+.SH "NORMATIVE REFERENCES"
 .TP
 [RMSGP]
 Richard Stallman
@@ -92,7 +92,7 @@ Is It Ever a Good Thing to Use a Nonfree Program?
 \[la]http://www.gnu.org/philosophy/is-ever-good-use-nonfree-program.en.html\[ra]2013
 
 
-.SH "BIBLIOGRAPHY"
+.SH "INFORMATIONAL REFERENCES"
 .TP
 [IDC]
 Andrew Yu
