well, that was silly me not adding before commit

--- a/draft-pragmatics/pragmatics.7
+++ b/draft-pragmatics/pragmatics.7
@@ -14,7 +14,7 @@ This document describes the author's viewpoint.  This does not represent the ide
 
 .SH "INTRODUCTION"
 .PP
-Readers of this memo probably understand the ideals of the Free Software Movement, and avoid proprietary software when possible.  However, as most outsiders are unaware and are deeply buried inside the proprietary dystopia created by mostly multibillion-dollar technology coorporations, our methods of communicating with the masses are ineffective.
+Readers of this memo probably understand the ideals of the Free Software Movement, and avoid proprietary software when possible.  However, as most outsiders are unaware and are deeply buried inside the proprietary dystopia created by mostly multibillion-dollar technology corporations, our methods of communicating with the masses are ineffective.
 
 .PP
 In February 2022, the author decided to permit limited usage of nonfree chat platforms to hopefully spread our ideas to the general public.  This was attempted by registering a Discord account, creating a Guild called "Free Software Introductions", and setting up a basic Discord-to-IRC relay to #fsi on both irc.andrewyu.org and irc.libera.chat.
@@ -27,7 +27,7 @@ One of the communities that he knows about, the VF-Technic Minetest community, p
 There are numerous free replacements to proprietary services such as Discord, such as Internet Relay Chat, the Extensible Messaging and Presense Protocol, the Matrix protocol, and email.  As Free Software activists, we generally prefer these protocols over nonfree services.  This section explains the reasons to consider nonfree services and protocols.
 
 .PP
-Generally, users on IRC and XMPP have a fair understanding of the Free Software Movement, and it is quick and easy to inform them what we mean by "free", "the four freedoms", and similar ideas.  For users on the Libera Chat IRC network, which by far has the most users of any network, it is exceptionally easy to introduce a user into the #fsf channel for discussions with people supporting Free Software.  Introducing ignorant users on these protocols and platforms are a day-to-day simple task.  Furthermore, the amount of users we can reach on these protocols are rather limiting.  Libera has around forty thousand users according to the \fB\fCUSERS\fR command, and considering the fact that around 90% of these people aren't ignorant, there isn't much we can do.
+Generally, users on IRC and XMPP have a fair understanding of the Free Software Movement, and it is quick and easy to inform them what we mean by "free", "the four freedoms", and similar ideas.  For users on the Libera Chat IRC network, which by far has the most users of any network, it is exceptionally easy to introduce a user into the #fsf channel for discussions with people supporting Free Software.  Introducing ignorant users on these protocols and platforms are a day-to-day simple task.  Furthermore, the amount of users we can reach on these protocols are rather limiting.  Libera has around forty thousand users according to the \fB\fCLUSERS\fR command, and considering the fact that around 90% of these people aren't ignorant, there isn't much we can do.
 
 .PP
 Matrix users, in particular users of the matrix.org homeserver, typically know but don't completely understand Free Software.  Rather than using Matrix IDs to identify users, the Matrix specification specifies that third-party platform identities, such as email and GitHub, are how users should be referenced both internally by servers and shown to other users.  This is obviously an increadibly foolish idea, especially considering the use of centralized identity servers (similar to X509 certificate authorities) for 3PIDs.  These are our first targets, but these should also be easy to get the idea across.
@@ -64,7 +64,7 @@ Activists \fBMUST NOT\fP list such nonfree services in "Contact Information" pag
 Communities for introducing users to Free Software on nonfree platforms \fBMUST\fP be bridged to a free protocol in some obvious way, in order to minimize the usage of nonfree platforms even for the purpose of communicating ideology to new users and allow members of the Free Software community refusing to use nonfree platforms in any way to participate.  Usages of nonfree platforms, besides part of the user-introduction process that must happen on the nonfree platform, \fBSHOULD\fP be avoided.
 
 .PP
-For example, the author created a Discord Guild called Free Software Introductions, which is one-way-puppeted to #fsi on irc.andrewyu.org, which is then one-way-puppeted to Libera.  The relay system is sort-of messed up, but it's working.  Inviting new users to it via https://discord.gg/7CYp7ntww7
+For example, the author created a Discord Guild called Free Software Introductions, which is one-way-puppeted to \fB\fC#fsi\fR on \fB\fCirc.andrewyu.org\fR, which is then one-way-puppeted to Libera.  The relay system is sort-of messed up, but it's working.  Inviting new users to it via https://discord.gg/7CYp7ntww7
 \[la]https://discord.gg/7CYp7ntww7\[ra] is good, but as the author has made his own sacrifice already, there exists no need for other existing Free Software activists to join and use it instead of IRC.
 
 .SH "TECHNICAL LIMITATIONS"
