--- a/draft-pragmatics/pragmatics.7
+++ b/draft-pragmatics/pragmatics.7
@@ -61,7 +61,13 @@ The latter is more interesting, as explained above our methods of spreading awar
 Activists \fBMUST NOT\fP list such nonfree services in "Contact Information" pages on their website or similar sources, unless followed by a explanation that the purpose of the nonfree platform is to introduce users thereof onto free protocols and to eventually exterminate the nonfree platform.  Whenever these references to nonfree platforms appear, the author \fBMUST\fP present free methods of communication.  Activists \fBSHOULD\fP pragmatically use as many of the popular free protocols as possible, to ensure that oppurtunities of introductions are not lost.  In cases involving competition between free and nonfree protocols and platforms, ethical concerns (i.e. enabling talking to a new user on any ethical platform) \fBMUST\fP take precedence over technical concerns (such as disliking the XMPP protocol for its inefficent use of XML) whenever possible.
 
 .PP
-Communities for introducing users to Free Software on nonfree platforms \fBMUST\fP be bridged to a free protocol in some obvious way, in order to minimize the usage of nonfree platforms even for the purpose of communicating ideology to new users and allow members of the Free Software community refusing to use nonfree platforms in any way to participate.  Usages of nonfree platforms, besides part of the user-introduction process that must happen on the nonfree platform, \fBSHOULD\fP be avoided.
+Communities for introducing users to Free Software on nonfree platforms \fBMUST\fP be bridged to a free protocol in some obvious way, in order to minimize the usage of nonfree platforms even for the purpose of communicating ideology to new users and allow members of the Free Software community refusing to use nonfree platforms in any way to participate.  Usages of nonfree platforms, besides part of the user-introduction process that must happen on the nonfree platform, \fBSHOULD\fP be avoided.  Free clients, if available, \fBSHOULD\fP be used, although many times usage is technically cumbersome.
+
+.PP
+When both (all) sides of the communication are happy using a free protocol, proprietary platforms \fBMUST NOT\fP be used.
+
+.PP
+During communications with users of nonfree platforms, activists \fBSHOULD\fP ask them what features of the nonfree platforms are attractive to the user, besides having more users.  This allows the community to take usage by the general population into account when developing new software or specifications.
 
 .PP
 For example, the author created a Discord Guild called Free Software Introductions, which is one-way-puppeted to \fB\fC#fsi\fR on \fB\fCirc.andrewyu.org\fR, which is then one-way-puppeted to Libera.  The relay system is sort-of messed up, but it's working.  Inviting new users to it via https://discord.gg/7CYp7ntww7
