--- a/draft-pragmatics/pragmatics.7
+++ b/draft-pragmatics/pragmatics.7
@@ -113,7 +113,7 @@ iShareFreedom's absolute standpoint in #fsf that we can spread awareness effecti
 
 .SH "CONTRIBUTORS"
 .PP
-Many thanks to Leah Rowe?
+Many thanks to everyone who has contributed to this document by supplying ideas, correcting typos or spreading the word, including but not limited to DiffieHellman, Leah Rowe, Noisytoot and fluxionary.
 
 .SH "AUTHORS"
 .PP
