--- a/rfd1/rfd1.7
+++ b/rfd1/rfd1.7
@@ -7,6 +7,9 @@ Free Software is undoubtably a good thing for society.  However, modern computer
 
 .SH "STATUS OF THIS MEMO"
 .PP
+An errta exists for this memo.
+
+.PP
 This document describes the author's viewpoint.  This does not represent the ideas of the Free Software Foundation or any other entity.  Distribution of this memo is unlimited.
 
 .SH "INTRODUCTION"
